--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
-    "watch": "webpack --mode production --watch"
+    "watch": "webpack --mode development --watch",
+    "start": "webpack serve --mode development"
   },
   "keywords": [
     "js",
@@ -16,6 +17,7 @@
   "license": "ISC",
   "devDependencies": {
     "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.3",
     "csv-loader": "^3.0.5",
     "file-loader": "^6.2.0",
@@ -23,6 +25,7 @@
     "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1",
     "xml-loader": "^1.2.1"
   },
   "dependencies": {
