--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
   ],
   "author": "Anton <anton@mail.com>",
   "license": "ISC",
+  "presets": ["@babel/preset-env"],
   "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
+    "babel-loader": "^9.1.2",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
@@ -27,6 +31,7 @@
     "mini-css-extract-plugin": "^2.7.2",
     "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
+    "webpack-bundle-analyzer": "^4.7.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1",
     "xml-loader": "^1.2.1"
